--- a/index.html
+++ b/index.html
@@ -12,12 +12,87 @@
   <!-- MY CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="d-flex justify-content-center align-items-center">
   
+  <div id="root" class="d-flex">
 
-  <h1>ciao</h1>
+    <!-- * SIDEBAR -->
+    <div class="col-5">
+      <!-- HEADER -->
+      <div class="py-3 bg-header d-flex justify-content-between align-items-center">
+        <div>
+          <img id="my-avatar" src="./assets/img/avatar_io.jpg" alt="mio_avatar" class="rounded-circle ms-2">
+          <span>Sofia</span>
+        </div>
+        <div>
+          <i class="fa-solid fa-circle-notch mx-2"></i>
+          <i class="fa-solid fa-message mx-2"></i>
+          <i class="fa-solid fa-ellipsis-vertical mx-2"></i>
+        </div>
+      </div>
 
+      <!-- NOTIFICHE -->
+      <div id="notifiche" class="d-flex align-items-center ps-3">
+        <i class="fa-regular fa-bell-slash bg-white rounded-circle p-3"></i>
+        <div class="ms-2">
+          <h5>Ricevi notifiche</h5>
+          <span>Attiva norifiche desktop</span>
+        </div>
+      </div>
 
+      <!-- CERCA CHAT -->
+      <div class="p-1">
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+          <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+      </div>
+
+      <!-- UTENTI -->
+      <div class="d-flex align-items-center border-bottom" v-for="(elem, index) in contacts" @click="conversation(element,index)">
+        <img v-bind:src="'./assets/img/avatar' + elem.avatar + '.jpg'" alt="avatar_1" class="rounded-circle mt-0 m-3 avatar-contatti">
+        <h6>{{elem.name}}</h6>
+      </div>
+    </div>
+
+    <!-- * MAIN -->
+    <div class="col-7">
+      <!-- HEADER MAIN -->
+      <div class="bg-header">
+        <div class="py-3 bg-header d-flex justify-content-between align-items-center">
+          <div>
+            <img id="my-avatar" :src="'./assets/img/avatar' + contacts[indiceDinamico].avatar + '.jpg'" alt="avatar-chat" class="rounded-circle ms-2">
+            <span>{{ contacts[indiceDinamico].name}}</span>
+          </div>
+          <div>
+            <i class="fa-solid fa-magnifying-glass mx-2"></i>
+            <i class="fa-solid fa-paperclip mx-2"></i>
+            <i class="fa-solid fa-ellipsis-vertical mx-2"></i>
+          </div>
+        </div>
+      </div>
+
+      <!-- CHAT -->
+      <div class="bg-chat p-3 d-flex flex-column">
+        <div 
+          v-for="(element, index) in contacts[indiceDinamico].messages" 
+          :class="(element.status == 'received') ? 'messaggio ricevuto' : 'messaggio inviato'"
+          >
+          <p>{{ element.message }} </p>
+        </div>
+      </div>
+
+      <!-- INPUT MESSAGGIO -->
+      <div class="p-1">
+        <div class="input-group mb-3 align-items-center">
+          <span class="input-group-text" id="basic-addon1"><i class="fa-regular fa-face-smile my-1"></i></i></span>
+          <input type="text" class="form-control" placeholder="Scrivi un messaggio" aria-label="Username" aria-describedby="basic-addon1">
+          <i class="fa-solid fa-microphone mx-3"></i>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <!-- BOOTSTRAP JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
