--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <!-- UTENTI -->
-      <div class="d-flex align-items-center border-bottom" v-for="(elem, index) in contacts" @click="conversation(element,index)">
+      <div class="d-flex align-items-center border-bottom pointer" v-for="(elem, index) in contacts" @click="conversation(index)">
         <img v-bind:src="'./assets/img/avatar' + elem.avatar + '.jpg'" alt="avatar_1" class="rounded-circle mt-0 m-3 avatar-contatti">
         <h6>{{elem.name}}</h6>
       </div>
@@ -61,8 +61,8 @@
       <div class="bg-header">
         <div class="py-3 bg-header d-flex justify-content-between align-items-center">
           <div>
-            <img id="my-avatar" :src="'./assets/img/avatar' + contacts[indiceDinamico].avatar + '.jpg'" alt="avatar-chat" class="rounded-circle ms-2">
-            <span>{{ contacts[indiceDinamico].name}}</span>
+            <img id="my-avatar" :src="'./assets/img/avatar' + contacts[indice].avatar + '.jpg'" alt="avatar-chat" class="rounded-circle ms-2">
+            <span>{{ contacts[indice].name}}</span>
           </div>
           <div>
             <i class="fa-solid fa-magnifying-glass mx-2"></i>
@@ -74,10 +74,7 @@
 
       <!-- CHAT -->
       <div class="bg-chat p-3 d-flex flex-column">
-        <div 
-          v-for="(element, index) in contacts[indiceDinamico].messages" 
-          :class="(element.status == 'received') ? 'messaggio ricevuto' : 'messaggio inviato'"
-          >
+        <div v-for="(element, index) in contacts[indice].messages"  :class="(element.status == 'received') ? 'messaggio ricevuto' : 'messaggio inviato'">
           <p>{{ element.message }} </p>
         </div>
       </div>
@@ -86,7 +83,7 @@
       <div class="p-1">
         <div class="input-group mb-3 align-items-center">
           <span class="input-group-text" id="basic-addon1"><i class="fa-regular fa-face-smile my-1"></i></i></span>
-          <input type="text" class="form-control" placeholder="Scrivi un messaggio" aria-label="Username" aria-describedby="basic-addon1">
+          <input type="text" class="form-control" placeholder="Scrivi un messaggio" aria-label="Username" aria-describedby="basic-addon1" v-model="inputMessaggio" @keyup.enter="messaggioInviato">
           <i class="fa-solid fa-microphone mx-3"></i>
         </div>
       </div>
